lang/macro/tests/ui/fail/20-invalid-constructor-parameter.stderr
error[E0277]: the trait bound `f32: liquid_lang::The_Type_You_Used_Here_Must_Be_An_Valid_Liquid_Data_Type` is not satisfied
  --> $DIR/20-invalid-constructor-parameter.rs:10:28
   |
10 |         pub fn constructor(&mut self, value: f32) {}
   |                            ^^^^^^^^^^^^^^^^^^^^^ the trait `liquid_lang::The_Type_You_Used_Here_Must_Be_An_Valid_Liquid_Data_Type` is not implemented for `f32`
